test/check/init_output_errors.expected
File "init_output.mim", line 1, characters 17-18
1 | step test3 a --> b
                     ^
Error: Uninitialized sequence
Step-output must be initialized
